Added new activities + made button modifications

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/traffic"
-    tools:context=".MainActivity">
+    tools:context=".Main2Activity">
+
 
     <TextView
         android:id="@+id/text"
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="AVOID THE TRAFFIC!"
-        android:textColor="#FFFFFF"
-        android:textSize="40dp"
+        android:text="Game Screen"
+        android:textColor="#FFF8F8"
+        android:textSize="30sp"
         android:textStyle="bold"
-        android:typeface="monospace" />
+        android:typeface="serif" />
 
     <Button
         android:id="@+id/button"
@@ -27,25 +27,10 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:layout_marginRight="85dp"
-        android:layout_marginBottom="120dp"
-        android:background="@drawable/button_design"
-        android:gravity="center"
-        android:text="PLAY GAME"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:layout_marginRight="85dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/button_design"
         android:gravity="center"
-        android:text="INSTRUCTIONS"
+        android:text="END GAME"
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 
