--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -2,8 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/background"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_x="100dp"
+    android:layout_y="50dp"
+    android:background="#030303"
     tools:context=".Instructions">
 
     <Button
@@ -12,14 +16,48 @@
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:layout_marginRight="85dp"
-        android:layout_marginBottom="50dp"
+        android:layout_gravity="center|center_horizontal"
+        android:layout_marginRight="115dp"
+        android:layout_marginBottom="54dp"
         android:background="@drawable/button_design"
-        android:gravity="center"
-        android:text="Go Back"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="Home"
         android:textColor="@android:color/white"
         android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="49dp"
+        android:autoText="false"
+        android:lines="1"
+        android:paddingLeft="50dp"
+        android:text="How to Play:"
+        android:textColor="#FFFFFF"
+        android:textSize="60sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="170dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:text="You are late for an important event! Dodge the obsticals to make it to your destination. Be careful! 3 hits and you failed"
+        android:textColor="#FFFFFFFF"
+        android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="350dp"
+        android:adjustViewBounds="true"
+        android:cropToPadding="false"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/supercar_2_3" />
 
 
 </RelativeLayout>
