--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,12 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_marginTop="150dp"
+        android:capitalize="none"
+        android:gravity="center|center_horizontal"
         android:text="AVOID THE TRAFFIC!"
         android:textColor="#FFFFFF"
         android:textSize="50dp"
@@ -26,11 +28,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginRight="85dp"
-        android:layout_marginBottom="270dp"
+        android:layout_marginRight="117dp"
+        android:layout_marginBottom="265dp"
         android:background="@drawable/button_design"
         android:gravity="center"
-        android:text="PLAY GAME"
+        android:text="Start"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
@@ -41,8 +43,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginRight="85dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginRight="115dp"
+        android:layout_marginBottom="196dp"
         android:background="@drawable/button_design"
         android:gravity="center"
         android:text="INSTRUCTIONS"
