--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="GAME OVER"
-        android:textColor="#000000"
+        android:textColor="#990707"
         android:textSize="50dp"
         android:textStyle="bold"
         android:typeface="serif" />
@@ -48,10 +49,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="400dp"
         android:background="@drawable/button_design"
-        android:text="Choose a different car"
+        android:gravity="center"
+        android:text="Change Vehicle"
         android:textColor="@android:color/white" />
 
     <Button
@@ -59,10 +60,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="470dp"
         android:background="@drawable/button_design"
-        android:text="Go back to home"
+        android:gravity="center"
+        android:text="Home"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
