--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -17,8 +17,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center|center_horizontal"
-        android:layout_marginRight="115dp"
-        android:layout_marginBottom="54dp"
+        android:layout_marginRight="90dp"
+        android:layout_marginBottom="160dp"
         android:background="@drawable/button_design"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Home"
@@ -30,24 +30,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="49dp"
-        android:autoText="false"
         android:lines="1"
         android:paddingLeft="50dp"
         android:text="How to Play:"
         android:textColor="#FFFFFF"
-        android:textSize="60sp"
+        android:textSize="45sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="120dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:text="You are late for an important event! Dodge the obsticals to make it to your destination. Be careful! 3 hits and you failed"
+        android:text="You are late for an important event! Dodge the obstacles to make it to your destination. Be careful! 3 hits and you will fail."
         android:textColor="#FFFFFFFF"
-        android:textSize="30sp" />
+        android:textSize="25sp" />
 
     <ImageView
         android:id="@+id/imageView"
