--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".Main4Activity">
 
     <TextView
@@ -13,7 +14,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="GAME OVER"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="50dp"
         android:textStyle="bold"
         android:typeface="serif" />
