--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@drawable/traffic"
     tools:context=".Main3Activity">
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="GAME OVER"
-        android:textColor="#FFFFFF"
+        android:textColor="#521010"
         android:textSize="50dp"
         android:textStyle="bold"
         android:typeface="serif" />
@@ -25,8 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="150dp"
+        android:gravity="center"
         android:text=""
         android:textColor="#000000"
         android:textSize="40dp"
@@ -39,9 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="330dp"
         android:background="@drawable/button_design"
+        android:gravity="center"
         android:text="Retry"
         android:textColor="@android:color/white" />
 
