--- a/app/src/main/res/layout/activity_red_car.xml
+++ b/app/src/main/res/layout/activity_red_car.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cement"
     tools:context=".RedCar">
+
 
     <Button
         android:id="@+id/button"
@@ -18,7 +20,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_design"
         android:gravity="center"
-        android:text="END GAME"
+        android:text="END GAME "
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 
@@ -30,6 +32,51 @@
         android:layout_alignParentTop="true"
         android:contentDescription="@string/app_name"
         android:src="@drawable/road" />
+
+    <ImageView
+        android:id="@+id/black_viper"
+        android:layout_width="200dp"
+        android:layout_height="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/audi" />
+
+    <ImageView
+        android:id="@+id/cone"
+        android:layout_width="200dp"
+        android:layout_height="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/cone" />
+
+    <ImageView
+        android:id="@+id/taxi"
+        android:layout_width="200dp"
+        android:layout_height="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/taxi" />
+
+    <ImageView
+        android:id="@+id/truck"
+        android:layout_width="200dp"
+        android:layout_height="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/truck" />
+
+    <ImageView
+        android:id="@+id/ambulance"
+        android:layout_width="200dp"
+        android:layout_height="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ambulance" />
+
 
 
 </RelativeLayout>
