--- a/app/src/main/res/layout/activity_black_car.xml
+++ b/app/src/main/res/layout/activity_black_car.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cement"
-    tools:context=".BlackCar">
+    tools:context=".RedCar">
 
 
     <Button
@@ -39,44 +39,16 @@
         android:layout_height="260dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+
         android:src="@drawable/black_viper" />
 
     <ImageView
-        android:id="@+id/police"
-        android:layout_width="200dp"
-        android:layout_height="260dp"
+        android:id="@+id/cone"
+        android:layout_width="100dp"
+        android:layout_height="160dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/police" />
-
-    <ImageView
-        android:id="@+id/taxi"
-        android:layout_width="200dp"
-        android:layout_height="260dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/taxi" />
-
-    <ImageView
-        android:id="@+id/truck"
-        android:layout_width="200dp"
-        android:layout_height="260dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/truck" />
-
-    <ImageView
-        android:id="@+id/ambulance"
-        android:layout_width="200dp"
-        android:layout_height="260dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ambulance" />
-
-
+        android:src="@drawable/cone" />
 
 </RelativeLayout>
