--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -17,8 +17,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center|center_horizontal"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginRight="90dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/button_design"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Home"
@@ -44,7 +44,7 @@
         android:layout_marginTop="120dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:text="You are late for an important event! Dodge the obstacles to make it to your destination. Be careful! 3 hits and you will fail."
+        android:text="You are late for an important event! Dodge the cones to make it to your destination. Be careful! 3 hits and you will fail."
         android:textColor="#FFFFFFFF"
         android:textSize="25sp" />
 
