--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="GAME OVER"
-        android:textColor="#521010"
+        android:textColor="#FFFFFF"
         android:textSize="50dp"
         android:textStyle="bold"
         android:typeface="serif" />
