--- a/app/src/main/res/layout/activity_black_car.xml
+++ b/app/src/main/res/layout/activity_black_car.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cement"
-    tools:context=".RedCar">
+    tools:context=".BlackCar">
 
 
     <Button
@@ -39,7 +39,6 @@
         android:layout_height="260dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-
         android:src="@drawable/black_viper" />
 
     <ImageView
