--- a/app/src/main/res/layout/activity_red_car.xml
+++ b/app/src/main/res/layout/activity_red_car.xml
@@ -11,16 +11,15 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="59dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginRight="85dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/button_design"
+        android:layout_marginRight="26dp"
+        android:layout_marginBottom="19dp"
+        android:background="@android:drawable/ic_media_pause"
         android:gravity="center"
-        android:text="END GAME "
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 
