--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@drawable/traffic"
     tools:context=".Main4Activity">
 
     <TextView
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="GAME OVER"
-        android:textColor="#FFFFFF"
+        android:textColor="#581111"
         android:textSize="50dp"
         android:textStyle="bold"
         android:typeface="serif" />
@@ -24,8 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="150dp"
+        android:gravity="center"
         android:text=""
         android:textColor="#000000"
         android:textSize="40dp"
@@ -38,9 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="330dp"
         android:background="@drawable/button_design"
+        android:gravity="center"
         android:text="Retry"
         android:textColor="@android:color/white" />
 
@@ -49,9 +50,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="400dp"
         android:background="@drawable/button_design"
+        android:gravity="center"
         android:text="Choose a different car"
         android:textColor="@android:color/white" />
 
@@ -60,9 +61,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="470dp"
         android:background="@drawable/button_design"
+        android:gravity="center"
         android:text="Go back to home"
         android:textColor="@android:color/white" />
 
