--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="GAME OVER"
-        android:textColor="#581111"
+        android:textColor="#FFFFFF"
         android:textSize="50dp"
         android:textStyle="bold"
         android:typeface="serif" />
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="200dp"
         android:gravity="center"
         android:text=""
         android:textColor="#000000"
