--- a/app/src/main/res/layout/activity_red_car.xml
+++ b/app/src/main/res/layout/activity_red_car.xml
@@ -38,8 +38,8 @@
         android:id="@+id/audi"
         android:layout_width="200dp"
         android:layout_height="260dp"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="116dp"
         android:layout_marginTop="507dp"
         android:src="@drawable/audi" />
@@ -57,7 +57,7 @@
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="330dp"
+        android:layout_marginLeft="200dp"
         android:layout_marginTop="10dp"
         android:text="Score: 0"
         android:textColor="#FFFFFF"
